--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <!-- <div class="loader">
+     <div class="loader">
         <h1>Environment</h1>
         <h1>experiences</h1>
         <h1>content</h1>
     </div>
     <div class="fixed-image">
 
-    </div> -->
+    </div> 
 
     <div class="main">
         <div class="page1">
